--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
         .waitlist-form button:hover {
             background-color: #005bb5;
         }
+        .message {
+            margin-top: 20px;
+            font-size: 14px;
+            padding: 10px;
+            border-radius: 5px;
+            display: none; /* Hidden by default */
+        }
+        .message.success {
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+        .message.error {
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
         .footer {
             margin-top: 20px;
             font-size: 12px;
@@ -73,32 +90,49 @@
             <input type="email" id="email" placeholder="Enter your email address" required>
             <button type="submit">Join the Waitlist</button>
         </form>
-        <script>
-            const form = document.getElementById("waitlistForm");
-            form.addEventListener("submit", async (e) => {
-                e.preventDefault();
-                const email = document.getElementById("email").value;
-        
-                try {
-                    const response = await fetch("https://us-central1-bridgitsocial.cloudfunctions.net/addToWaitlist", {
-                        method: "POST",
-                        headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ email }),
-                    });
-        
-                    if (response.ok) {
-                        alert("Successfully joined the waitlist!");
-                        form.reset();
-                    } else {
-                        const error = await response.json();
-                        alert("Error: " + error.error);
-                    }
-                } catch (err) {
-                    alert("Failed to connect. Please try again later.");
-                }
-            });
-        </script>
+        <div id="message" class="message"></div>
         <div class="footer">We respect your privacy. Your email will never be shared.</div>
     </div>
+
+    <script>
+        const form = document.getElementById("waitlistForm");
+        const messageDiv = document.getElementById("message");
+
+        form.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const email = document.getElementById("email").value;
+
+            try {
+                const response = await fetch("https://us-central1-bridgitsocial.cloudfunctions.net/addToWaitlist", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ email }),
+                });
+
+                if (response.ok) {
+                    // Success: Show success message
+                    showMessage("Successfully joined the waitlist!", "success");
+                    form.reset();
+                } else if (response.status === 409) {
+                    // Duplicate email: Show error message
+                    const error = await response.json();
+                    showMessage(error.error || "Email already on the waitlist", "error");
+                } else {
+                    // Other errors
+                    const error = await response.json();
+                    showMessage(error.error || "Something went wrong. Please try again.", "error");
+                }
+            } catch (err) {
+                // Network or server error
+                showMessage("Failed to connect. Please try again later.", "error");
+            }
+        });
+
+        function showMessage(text, type) {
+            messageDiv.textContent = text;
+            messageDiv.className = `message ${type}`;
+            messageDiv.style.display = "block";
+        }
+    </script>
 </body>
 </html>
