--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
         .waitlist-form button:hover {
             background-color: #005bb5;
         }
+        .message {
+            margin-top: 20px;
+            font-size: 14px;
+            padding: 10px;
+            border-radius: 5px;
+            display: none; /* Hidden by default */
+        }
+        .message.success {
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+        .message.error {
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
         .footer {
             margin-top: 20px;
             font-size: 12px;
@@ -116,36 +133,56 @@
         const messageDiv = document.getElementById("message");
 
         form.addEventListener("submit", async (e) => {
-            e.preventDefault();
-            const email = document.getElementById("email").value;
-            const nycConfirmation = document.getElementById("nyc-confirmation").checked;
+    e.preventDefault();
+    const email = document.getElementById("email").value;
+    const nycConfirmation = document.getElementById("nyc-confirmation").checked;
 
-            if (!nycConfirmation) {
-                showMessage("You must agree to the NYC usage terms before joining the waitlist.", "error");
-                return;
+    if (!nycConfirmation) {
+        showMessage(
+            "You must agree to the NYC usage terms before joining the waitlist.",
+            "error"
+        );
+        return;
+    }
+
+    try {
+        const response = await fetch(
+            "https://us-central1-bridgitsocial.cloudfunctions.net/addToWaitlist",
+            {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ email, nycConfirmation }),
             }
+        );
 
-            try {
-                const response = await fetch("https://us-central1-bridgitsocial.cloudfunctions.net/addToWaitlist", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ email, nycConfirmation }),
-                });
+        if (response.ok) {
+            showMessage(
+                "Thank you for joining the waitlist! We'll keep you updated.",
+                "success"
+            );
+            form.reset();
+        } else if (response.status === 409) {
+            const error = await response.json();
+            showMessage(
+                error.error || "Email already on the waitlist.",
+                "error"
+            );
+        } else {
+            const error = await response.json();
+            showMessage(
+                error.error || "Something went wrong. Please try again.",
+                "error"
+            );
+        }
+    } catch (err) {
+        showMessage(
+            "Failed to connect. Please check your internet connection and try again.",
+            "error"
+        );
+    }
+});
 
-                if (response.ok) {
-                    showMessage("Thank you for joining the waitlist! We'll keep you updated.", "success");
-                    form.reset();
-                } else if (response.status === 409) {
-                    const error = await response.json();
-                    showMessage(error.error || "Email already on the waitlist.", "error");
-                } else {
-                    const error = await response.json();
-                    showMessage(error.error || "Something went wrong. Please try again.", "error");
-                }
-            } catch (err) {
-                showMessage("Failed to connect. Please check your internet connection and try again.", "error");
-            }
-        });
+
 
         function showMessage(text, type) {
             messageDiv.textContent = text;
