--- a/index.html
+++ b/index.html
@@ -131,64 +131,62 @@
     <script>
         const form = document.getElementById("waitlistForm");
         const messageDiv = document.getElementById("message");
-
+        
         form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-    const email = document.getElementById("email").value;
-    const nycConfirmation = document.getElementById("nyc-confirmation").checked;
+            e.preventDefault();
+            const email = document.getElementById("email").value;
+            const nycConfirmation = document.getElementById("nyc-confirmation").checked;
 
-    if (!nycConfirmation) {
-        showMessage(
-            "You must agree to the NYC usage terms before joining the waitlist.",
-            "error"
-        );
-        return;
-    }
-
-    try {
-        const response = await fetch(
-            "https://us-central1-bridgitsocial.cloudfunctions.net/addToWaitlist",
-            {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ email, nycConfirmation }),
+            if (!nycConfirmation) {
+                showMessage(
+                    "You must agree to the NYC usage terms before joining the waitlist.",
+                    "error"
+                );
+                return;
             }
-        );
 
-        if (response.ok) {
-            showMessage(
-                "Thank you for joining the waitlist! We'll keep you updated.",
-                "success"
-            );
-            form.reset();
-        } else if (response.status === 409) {
-            const error = await response.json();
-            showMessage(
-                error.error || "Email already on the waitlist.",
-                "error"
-            );
-        } else {
-            const error = await response.json();
-            showMessage(
-                error.error || "Something went wrong. Please try again.",
-                "error"
-            );
-        }
-    } catch (err) {
-        showMessage(
-            "Failed to connect. Please check your internet connection and try again.",
-            "error"
-        );
-    }
-});
+            try {
+                const response = await fetch(
+                    "https://us-central1-bridgitsocial.cloudfunctions.net/addToWaitlist",
+                    {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify({ email, nycConfirmation }),
+                    }
+                );
 
-
+                if (response.ok) {
+                    const data = await response.json();
+                    showMessage(data.message, "success");
+                    form.reset();
+                } else if (response.status === 409) {
+                    const error = await response.json();
+                    showMessage(
+                        error.error || "Email already on the waitlist.",
+                        "error"
+                    );
+                } else {
+                    const error = await response.json();
+                    showMessage(
+                        error.error || "Something went wrong. Please try again.",
+                        "error"
+                    );
+                }
+            } catch (err) {
+                showMessage(
+                    "Failed to connect. Please check your internet connection and try again.",
+                    "error"
+                );
+            }
+        });
 
         function showMessage(text, type) {
+            const messageDiv = document.getElementById("message");
             messageDiv.textContent = text;
             messageDiv.className = `message ${type}`;
             messageDiv.style.display = "block";
         }
+
     </script>
 </body>
 </html>
