--- a/index.html
+++ b/index.html
@@ -12,12 +12,28 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: url('Banner.png');
+            background-image: url('Banner3x.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             color: #333;
+
+
+            /* Smaller screens (e.g., tablets) */
+            @media (max-width: 1024px) {
+                body {
+                    background-image: url('Banner2x.png'); /* Medium-sized image */
+                }
+            }
+
+            /* Extra small screens (e.g., mobile phones) */
+            @media (max-width: 600px) {
+                body {
+                    background-image: url('Banner.png'); /* Small-sized image */
+                }
+            }
         }
+        
         .container {
             text-align: center;
             padding: 20px;
@@ -28,12 +44,13 @@
             border-radius: 10px;
         }
         .logo img {
-            width: 80px;
+            width: 180px;
+            height: 120px;
             margin-bottom: 10px;
             border-radius: 8px;
         }
         .headline {
-            font-size: 22px;
+            font-size: 20px;
             font-weight: bold;
             color: #0073e6;
             margin: 10px 0;
@@ -49,6 +66,7 @@
             color: #333;
             font-weight: bold;
         }
+        .waitlist-form input[type="text"],
         .waitlist-form input[type="email"] {
             width: calc(100% - 20px); /* Adjust width to account for padding */
             padding: 10px;
@@ -109,22 +127,25 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="appstore.png" alt="Bridgit Social Logo">
+            <img src="appstore3x.png" alt="Bridgit Social Logo">
         </div>
-        <p class="headline">Bridgit Social is Coming Soon!</p>
-        <p class="subtext">Available only in NYC for this phase. Join the waitlist if you're ready to connect in NYC!</p>
-        <p class="call-to-action">Sign up now to secure your spot among the first 100 users!</p>
+        <p class="headline">What If Your Next Connection Could Change Everything?</p>
+        <p class="headline">Bridgit Social Is Almost Here.</p>
+        <p class="call-to-action">A revolutionary way to connect, exclusive to NYC.</p>
+        <p class="subtext">Be among the first to explore a bold, new approach to professional networking. Are you ready to discover what’s next?</p>
+        <p class="call-to-action">Spots are limited. Claim yours now.</p>
         <form class="waitlist-form" id="waitlistForm">
+            <input type="text" id="name" placeholder="Enter your name (optional)">
             <input type="email" id="email" placeholder="Enter your email address" required>
             <label>
                 <input type="checkbox" id="nyc-confirmation" required>
-                I understand and agree that I will only join the waitlist if I plan to use it in NYC. I also understand the app will be restricted if used outside NYC.
+                I’m ready to redefine networking in NYC. I understand the app is designed for NYC users and may be restricted elsewhere.
             </label>
-            <button type="submit">Join the Waitlist</button>
+            <button type="submit">Secure My Spot</button>
         </form>
         <div id="message" class="message"></div>
         <div class="footer">
-            We respect your privacy. Your email will never be shared. <br>
+            Your journey begins here. Your privacy is our priority. <br>
             <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
         </div>
     </div>
@@ -134,6 +155,7 @@
         
         form.addEventListener("submit", async (e) => {
             e.preventDefault();
+            const name = document.getElementById("name").value || null; 
             const email = document.getElementById("email").value;
             const nycConfirmation = document.getElementById("nyc-confirmation").checked;
 
