--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ email, nycConfirmation }),
+                        body: JSON.stringify({ name, email, nycConfirmation }),
                     }
                 );
 
