updated subscription confirmed page

--- a/next/whatsNext.html
+++ b/next/whatsNext.html
@@ -90,8 +90,10 @@
         <div class="logo">
             <img src="logo.png" alt="Bridgit Social Logo">
         </div>
-        <h1 class="headline">Discover What’s Next</h1>
-        <p class="subtext">Welcome to the future of networking. Here’s what you can expect from Bridgit Social:</p>
+        
+
+        <h1 class="headline">Subscription confirmed!</h1>
+        <p class="subtext">Boom! You're officially confirmed and on the list. Expect some great emails headed your way very soon.</p>
 
         <div class="features">
             <h3>Why You’re Part of Something Special</h3>
@@ -107,12 +109,11 @@
         <div class="cta">
             <p>We’re thrilled to have you onboard. Stay tuned for updates, new features, and the official launch date.</p>
         </div>
-
         <p class="subtext">The future of networking is just around the corner – and you’re leading the way.</p>
 
         <div class="footer">
             <p>&copy; 2025 Bridgit Social. All rights reserved.</p>
-            <p><a href="https://example.com/privacy-policy">Privacy Policy</a> | <a href="https://example.com/terms">Terms of Service</a></p>
+            <p><a href="../PrivacyPolicy/PrivacyPolicyBridgitSocial.html">Privacy Policy</a> | <a href="../PrivacyPolicy/TermsofUse_TOU_BridgitSocial.html">Terms of Service</a></p>
         </div>
     </div>
 </body>
