changed the title

--- a/next/whatsNext.html
+++ b/next/whatsNext.html
@@ -92,7 +92,7 @@
         </div>
         
 
-        <h1 class="headline">Subscription confirmed!</h1>
+        <h1 class="headline">Thanks for signing up. Your subscription confirmed!</h1>
         <p class="subtext">Boom! You're officially confirmed and on the list. Expect some great emails headed your way very soon.</p>
 
         <div class="features">
