added and modified template for instructions

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <input type="text" id="referralCode" placeholder="Referral code (if any)">
             <label>
                 <input type="checkbox" id="nyc-confirmation" required>
-                I understand the app is currently designed for NYC users and may be restricted elsewhere.
+                I understand the app is currently designed for US users and may be restricted elsewhere.
             </label>
             <button type="submit">Secure My Spot</button>
             <div id="loadingIndicator" style="display: none; margin-top: 10px; font-size: 14px; color: #0073e6;">
