added button for app store, coloring and contact us section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 						<h2>Welcome to Bridgit Social</h2>
 					</header>
 					<p>Bridgit Social helps you discover and connect with real people, in real-time, wherever you are. Whether you're at a cafe, coworking space, or simply nearby—start conversations that matter.</p>
+					<ul class="actions special">
+						<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i>  App Store</a></li>
+					</ul>
 					<footer>
 						<a href="#one" class="button style2 down">Get Started</a>
 					</footer>
@@ -109,7 +112,7 @@
 						<p>Have a question or want to partner with us? We’d love to hear from you.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form method="post" action="https://formsubmit.co/ali.fouladgar@bridgitsocial.com">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
@@ -128,10 +131,15 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/company/bridgit-social" class="icon brands fa-linkedin-in"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.instagram.com/bridgit.social/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" class="icon brands fa-apple"><span class="label">Instagram</span></a></li>
 				</ul>
 				<ul class="menu">
-					<li>&copy; Bridgit Social</li>
+					<li>&copy;Copyright Bridgit Social 2025</li>
 				</ul>
+				<ul class="menu">
+					<li><a href="PrivacyPolicy/PrivacyPolicyBridgitSocial.html">Privacy Policy</a> | <a href="PrivacyPolicy/TermsofUse_TOU_BridgitSocial.html">Terms of Service</a></li>
+				</ul>
+				
 			</footer>
 
 		<!-- Scripts -->
