added the logo and app store additional in screenshots section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="facicon.png" type="image/png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Bridgit Social</h1>
+				<a href="#intro">
+					<img src="facicon.png" alt="Bridgit Social Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
+				</a>
 				<nav>
 					<ul>
 						<li><a href="#intro">Welcome</a></li>
@@ -81,6 +84,9 @@
 						<h2>App Screenshots</h2>
 						<p>Explore Bridgit Social through the app interface. From status toggling to meeting confirmation—see how seamless networking can be.</p>
 					</header>
+					<ul class="actions special">
+						<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i>  App Store</a></li>
+					</ul>
 					<div class="gallery">
 						<article class="from-left">
 							<a href="images/fulls/01.png" class="image fit"><img src="images/thumbs/01.png" title="Create Profile" alt="Create Profile" /></a>
