--- a/index.html
+++ b/index.html
@@ -1,162 +1,287 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Bridgit Social</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="facicon.png" type="image/png">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Bridgit Social - Real Connections, Real Time, Real Places</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover"
+    />
 
-		<!-- Header -->
-			<header id="header">
-				<a href="#intro">
-					<img src="facicon.png" alt="Bridgit Social Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
-				</a>
-				<nav>
-					<ul>
-						<li><a href="#intro">Welcome</a></li>
-						<li><a href="#one">How It Works</a></li>
-						<li><a href="#two">Privacy & Safety</a></li>
-						<li><a href="#work">Screenshots</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Bridgit Social helps you discover and connect with real people, in real-time, wherever you are. Location-based networking with privacy-first design. Available on iOS."
+    />
+    <meta
+      name="keywords"
+      content="social networking, location-based, real connections, meet people nearby, networking app, privacy-first social"
+    />
+    <meta name="author" content="Bridgit Group LLC" />
+    <meta name="theme-color" content="#6366F1" />
 
-		<!-- Intro -->
-			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content">
-					<header>
-						<h2>Welcome to Bridgit Social</h2>
-					</header>
-					<p>Bridgit Social helps you discover and connect with real people, in real-time, wherever you are. Whether you're at a cafe, coworking space, or simply nearby—start conversations that matter.</p>
-					<ul class="actions special">
-						<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i>  App Store</a></li>
-					</ul>
-					<footer>
-						<a href="#one" class="button style2 down">Get Started</a>
-					</footer>
-				</div>
-			</section>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bridgitsocial.com/" />
+    <meta
+      property="og:title"
+      content="Bridgit Social - Real Connections, Real Time, Real Places"
+    />
+    <meta
+      property="og:description"
+      content="Discover and connect with real people in real-time. Privacy-first location-based social networking."
+    />
+    <meta
+      property="og:image"
+      content="https://bridgitsocial.com/Banner3x.png"
+    />
 
-		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>How It Works</h2>
-					</header>
-					<p>Create your profile with a face photo, choose your networking mode (Same Place or Walking Distance), and go online. See who's around, express interest anonymously with "Mark to Meet," and connect when the interest is mutual. After meeting, confirm and record private notes.</p>
-					<ul>
-						<li>- Real-time, real-place connections</li>
-						<li>- Stay anonymous until matched</li>
-						<li>- Leave notes to meet</li> 
-						<li>- Private note-taking post-meeting</li>
-						<li>- View users on a privacy-protected map</li>
-					</ul>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://bridgitsocial.com/" />
+    <meta
+      name="twitter:title"
+      content="Bridgit Social - Real Connections, Real Time, Real Places"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover and connect with real people in real-time. Privacy-first location-based social networking."
+    />
+    <meta
+      name="twitter:image"
+      content="https://bridgitsocial.com/Banner3x.png"
+    />
 
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Privacy & Safety</h2>
-					</header>
-					<p>Bridgit uses approximate coordinates in Walking Distance mode and only shows real presence in Same Place mode with permission. Your identity is only shared when mutual interest is confirmed. We never show your actual GPS coordinates to other users.</p>
-					<ul>
-						<li>- No real GPS shared</li>
-						<li>- Fake map pins to mask location</li>
-						<li>- Hide, report or block profiles permanently</li>
-						<li>- Meeting confirmation & archiving tools</li>
-					</ul>
-				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
+    <!-- Apple Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="Bridgit Social" />
 
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>App Screenshots</h2>
-						<p>Explore Bridgit Social through the app interface. From status toggling to meeting confirmation—see how seamless networking can be.</p>
-					</header>
-					<ul class="actions special">
-						<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i>  App Store</a></li>
-					</ul>
-					<div class="gallery">
-						<article class="from-left">
-							<a href="images/fulls/01.png" class="image fit"><img src="images/thumbs/01.png" title="Create Profile" alt="Create Profile" /></a>
-						</article>
-						<article class="from-right">
-							<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.png" title="Discover New People" alt="Discover New People" /></a>
-						</article>
-						<article class="from-left">
-							<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.png" title="Mark to Meet" alt="Mark to Meet" /></a>
-						</article>
-						<article class="from-right">
-							<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.png" title="Matched List" alt="Matches" /></a>
-						</article>
-						<article class="from-left">
-							<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.png" title="View Map" alt="View Map" /></a>
-						</article>
-						<article class="from-right">
-							<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.png" title="Manage Connections" alt="Manage Connections" /></a>
-						</article>
-					</div>
-				</div>
-			</section>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" href="facicon.png" type="image/png" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+      <a href="#intro">
+        <img
+          src="facicon.png"
+          alt="Bridgit Social Logo"
+          style="height: 40px; vertical-align: middle; margin-right: 10px"
+        />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#intro">Welcome</a></li>
+          <li><a href="#one">How It Works</a></li>
+          <li><a href="#two">Privacy & Safety</a></li>
+          <li><a href="#work">Screenshots</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="content">
-					<header>
-						<h2>Contact Us</h2>
-						<p>Have a question or want to partner with us? We’d love to hear from you.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="https://formsubmit.co/ali.fouladgar@bridgitsocial.com">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</div>
-				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/company/bridgit-social" class="icon brands fa-linkedin-in"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.instagram.com/bridgit.social/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" class="icon brands fa-apple"><span class="label">Instagram</span></a></li>
+    	<!-- Intro -->
+		<section id="intro" class="main style1 dark fullscreen">
+			<div class="content">
+				<header>
+					<h2>Connect with Real People,<br />In Real Time, In Real Places</h2>
+				</header>
+				<p>Bridgit Social helps you discover and connect with people around you—whether you're at a café, coworking space, or just nearby. Start meaningful conversations that lead to real connections.</p>
+				<ul class="actions special">
+					<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i> Download on App Store</a></li>
 				</ul>
-				<ul class="menu">
-					<li>&copy;Copyright Bridgit Social 2025</li>
-				</ul>
-				<ul class="menu">
-					<li><a href="PrivacyPolicy/PrivacyPolicyBridgitSocial.html">Privacy Policy</a> | <a href="PrivacyPolicy/TermsofUse_TOU_BridgitSocial.html">Terms of Service</a></li>
-				</ul>
-				
-			</footer>
+			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+    	<!-- One -->
+		<section id="one" class="main style2 right dark fullscreen">
+			<div class="content box style2">
+				<header>
+					<h2>How It Works</h2>
+				</header>
+				<p>Simple, intuitive, and designed for real-world connections. Create your profile, choose your networking mode, and discover people around you who are ready to connect.</p>
+				<ul>
+					<li>Real-time, location-based discovery</li>
+					<li>Anonymous browsing until you match</li>
+					<li>"Mark to Meet" for mutual interest</li> 
+					<li>Privacy-protected map view</li>
+					<li>Private notes after connections</li>
+					<li>Two modes: Same Place or Walking Distance</li>
+				</ul>
+			</div>
+		</section>
 
-	</body>
+	<!-- Two -->
+		<section id="two" class="main style2 left dark fullscreen">
+			<div class="content box style2">
+				<header>
+					<h2>Privacy & Safety First</h2>
+				</header>
+				<p>Your privacy and safety are our top priorities. Bridgit uses advanced privacy protection to keep you safe while connecting. Your real location is never shared—only approximate coordinates in Walking Distance mode.</p>
+				<ul>
+					<li>Actual GPS coordinates never shared</li>
+					<li>Fuzzy location pins for privacy</li>
+					<li>Hide, report, or block users anytime</li>
+					<li>Meeting confirmation & archiving tools</li>
+				</ul>
+      </div>
+    </section>
+
+    <!-- Work -->
+		<section id="work" class="main style3 primary">
+			<div class="content">
+				<header>
+					<h2>See Bridgit in Action</h2>
+					<p>Explore the app interface and discover how easy it is to connect with people around you. From profile creation to meeting confirmation—networking made seamless.</p>
+				</header>
+				<ul class="actions special">
+					<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i> Download on App Store</a></li>
+				</ul>
+        <div class="gallery">
+          <article class="from-left">
+            <a href="images/fulls/01.png" class="image fit"
+              ><img
+                src="images/thumbs/01.png"
+                title="Create Profile"
+                alt="Create Profile"
+            /></a>
+          </article>
+          <article class="from-right">
+            <a href="images/fulls/02.jpg" class="image fit"
+              ><img
+                src="images/thumbs/02.png"
+                title="Discover New People"
+                alt="Discover New People"
+            /></a>
+          </article>
+          <article class="from-left">
+            <a href="images/fulls/03.jpg" class="image fit"
+              ><img
+                src="images/thumbs/03.png"
+                title="Mark to Meet"
+                alt="Mark to Meet"
+            /></a>
+          </article>
+          <article class="from-right">
+            <a href="images/fulls/04.jpg" class="image fit"
+              ><img
+                src="images/thumbs/04.png"
+                title="Matched List"
+                alt="Matches"
+            /></a>
+          </article>
+          <article class="from-left">
+            <a href="images/fulls/05.jpg" class="image fit"
+              ><img src="images/thumbs/05.png" title="View Map" alt="View Map"
+            /></a>
+          </article>
+          <article class="from-right">
+            <a href="images/fulls/06.jpg" class="image fit"
+              ><img
+                src="images/thumbs/06.png"
+                title="Manage Connections"
+                alt="Manage Connections"
+            /></a>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="main style3 secondary">
+      <div class="content">
+        <header>
+          <h2>Contact Us</h2>
+          <p>
+            Have a question or want to partner with us? We’d love to hear from
+            you.
+          </p>
+        </header>
+        <div class="box">
+          <form
+            method="post"
+            action="https://formsubmit.co/ali.fouladgar@bridgitsocial.com"
+          >
+            <div class="fields">
+              <div class="field half">
+                <input type="text" name="name" placeholder="Name" />
+              </div>
+              <div class="field half">
+                <input type="email" name="email" placeholder="Email" />
+              </div>
+              <div class="field">
+                <textarea
+                  name="message"
+                  placeholder="Message"
+                  rows="6"
+                ></textarea>
+              </div>
+            </div>
+            <ul class="actions special">
+              <li><input type="submit" value="Send Message" /></li>
+            </ul>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+      <ul class="icons">
+        <li>
+          <a
+            href="https://www.linkedin.com/company/bridgit-social"
+            class="icon brands fa-linkedin-in"
+            ><span class="label">Twitter</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/bridgit.social/"
+            class="icon brands fa-instagram"
+            ><span class="label">Instagram</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://apps.apple.com/us/app/bridgit-social/id6743941115"
+            class="icon brands fa-apple"
+            ><span class="label">Instagram</span></a
+          >
+        </li>
+      </ul>
+      <ul class="menu">
+        <li>&copy;Copyright Bridgit Social 2025</li>
+      </ul>
+      <ul class="menu">
+        <li>
+          <a href="PrivacyPolicy/PrivacyPolicyBridgitSocial.html"
+            >Privacy Policy</a
+          >
+          |
+          <a href="PrivacyPolicy/TermsofUse_TOU_BridgitSocial.html"
+            >Terms of Service</a
+          >
+        </li>
+      </ul>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
