--- a/email-templates/next-steps/whatsNext.html
+++ b/email-templates/next-steps/whatsNext.html
@@ -88,7 +88,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="logo.png" alt="Bridgit Social Logo">
+            <img src="../images/email/next-logo.png" alt="Bridgit Social Logo">
         </div>
         
 
