changed the waitlist page to join the club for partnership purposes.

--- a/email-templates/welcome/welcome.html
+++ b/email-templates/welcome/welcome.html
@@ -96,7 +96,7 @@
                 Best regards,<br>
                 <strong>Ali Fouladgar</strong><br>
                 Founder & CEO<br>
-                <a href="mailto:ali.fouladgar@bridgitsocial.com">ali.fouladgar@bridgitsocial.com</a><br>
+                <a href="mailto:partnerships@bridgitsocial.com">partnerships@bridgitsocial.com</a><br>
                 <img src="https://github.com/amfooladgar/bridgitsocial-landingpage/blob/main/appstore1.png?raw=true" alt="logo">
             </p>
         </div>
