--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <li><a href="#work">Screenshots</a></li>
         <li><a href="blog/index.html">Blog</a></li>
         <li><a href="instructions.html">How To Use</a></li>
-        <li><a href="waitListPage.html">Join Waitlist</a></li>
+        <li><a href="waitListPage.html">Join the Club</a></li>
         <li><a href="support/support.html">Support</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -216,7 +216,7 @@
         <div class="box">
           <form
             method="post"
-            action="https://formsubmit.co/ali.fouladgar@bridgitsocial.com"
+            action="https://formsubmit.co/partnerships@bridgitsocial.com"
           >
             <div class="fields">
               <div class="field half">
