fixed the waitlist menu to join the club and changed the personal emails to the right email groups.

--- a/support/support.html
+++ b/support/support.html
@@ -32,7 +32,7 @@
         <li><a href="../index.html#work">Screenshots</a></li>
         <li><a href="../blog/index.html">Blog</a></li>
         <li><a href="../instructions.html">How To Use</a></li>
-        <li><a href="../waitListPage.html">Join Waitlist</a></li>
+        <li><a href="../waitListPage.html">Join the Club</a></li>
         <li><a href="../support/support.html">Support</a></li>
         <li><a href="../index.html#contact">Contact</a></li>
       </ul>
@@ -55,7 +55,7 @@
             <div style="font-size: 3rem; margin-bottom: 1rem;">📧</div>
             <h4 style="color: var(--color-accent-light); font-size: 1.3rem; margin-bottom: 1rem;">Email Support</h4>
             <p style="margin-bottom: 1.5rem; color: var(--color-text-light);">Get personalized help via email</p>
-            <a href="mailto:ali.fouladgar@bridgitsocial.com" class="button" style="font-size: 0.95rem;">Send Email</a>
+            <a href="mailto:support@bridgitsocial.com" class="button" style="font-size: 0.95rem;">Send Email</a>
           </div>
           
           <div style="text-align: center; padding: 2rem; background: rgba(99, 102, 241, 0.05); border-radius: 1rem; border: 1px solid rgba(99, 102, 241, 0.2);">
@@ -144,7 +144,7 @@
       <div style="text-align: center; margin-top: 4rem;">
         <h3 style="font-size: 2rem; margin-bottom: 1rem;">Still need help?</h3>
         <p style="font-size: 1.1rem; margin-bottom: 2rem; color: var(--color-text-light); max-width: 600px; margin-left: auto; margin-right: auto;">Our team is here to assist you. Send us an email and we'll get back to you as soon as possible.</p>
-        <a href="mailto:ali.fouladgar@bridgitsocial.com" class="button" style="font-size: 1.1rem; padding: 1rem 3rem;">
+        <a href="mailto:support@bridgitsocial.com" class="button" style="font-size: 1.1rem; padding: 1rem 3rem;">
           Contact Support
         </a>
       </div>
